깃 이그노어 수정입니다
.gitignore 수정해서 다시 올립니다

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-.metadata/
-Servers/
+Servers
+
+# Eclipse #
+.project
+.metadata
+.classpath
+.settings/
+.loadpath
+
+# OS Files #
+.DS_Store
+
 *.class
-*.classpath
-*.project
-*.setting
-/target/
-/bin/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.db
+
+# Maven
+log/
+target/
