--- a/Final_Project04/pom.xml
+++ b/Final_Project04/pom.xml
@@ -183,12 +183,20 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		<!-- json 20160810 -->
-		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20160810</version>
 		</dependency>
+		<!--jackson.databind  -->
+		<!-- https://mvnrepository.com/artifact/com.liferay/com.fasterxml.jackson.databind -->
+		<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>com.fasterxml.jackson.databind</artifactId>
+			<version>2.10.0.LIFERAY-PATCHED-1</version>
+		</dependency>
+
+
 
 	</dependencies>
 
