--- a/Final_Project04/pom.xml
+++ b/Final_Project04/pom.xml
@@ -195,7 +195,21 @@
 			<artifactId>com.fasterxml.jackson.databind</artifactId>
 			<version>2.10.0.LIFERAY-PATCHED-1</version>
 		</dependency>
-
+		
+		<!-- commons-io -->
+		<dependency>
+    		<groupId>commons-io</groupId>
+    		<artifactId>commons-io</artifactId>
+    		<version>2.8.0</version>
+		</dependency>
+		
+		<!-- commons-fileupload -->
+		<dependency>
+    		<groupId>commons-fileupload</groupId>
+    		<artifactId>commons-fileupload</artifactId>
+    		<version>1.4</version>
+		</dependency>
+		
 	</dependencies>
 
 	<repositories>
