--- a/Final_Project04/pom.xml
+++ b/Final_Project04/pom.xml
@@ -260,6 +260,15 @@
     		<version>1.1</version>
     		<scope>provided</scope>
 		</dependency>
+		
+		<!-- thumbnailator -->
+		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+		<dependency>
+    		<groupId>net.coobird</groupId>
+    		<artifactId>thumbnailator</artifactId>
+    		<version>0.4.8</version>
+		</dependency>
+		
 
 	</dependencies>
 
