--- a/Final_Project04/pom.xml
+++ b/Final_Project04/pom.xml
@@ -269,7 +269,21 @@
     		<version>0.4.8</version>
 		</dependency>
 		
-
+	
+		<!-- 구글 리캡차 -->
+		<dependency>
+			<groupId>net.tanesha.recaptcha4j</groupId>
+			<artifactId>recaptcha4j</artifactId>
+			<version>0.0.7</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.1</version>
+		</dependency>
+	
+		
 	</dependencies>
 
 	<repositories>
