--- a/Final_Project04/pom.xml
+++ b/Final_Project04/pom.xml
@@ -282,6 +282,14 @@
 			<artifactId>javax.json</artifactId>
 			<version>1.1</version>
 		</dependency>
+		
+		  <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+          <!-- json 변환 -->
+         <dependency>
+             <groupId>com.google.code.gson</groupId>
+             <artifactId>gson</artifactId>
+             <version>2.8.6</version>
+         </dependency>
 	
 		
 	</dependencies>
