--- a/Final_Project04/src/main/webapp/WEB-INF/web.xml
+++ b/Final_Project04/src/main/webapp/WEB-INF/web.xml
@@ -63,4 +63,9 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	<!-- session 15분으로 설정 -->
+	<session-config>
+        <session-timeout>15</session-timeout>
+    </session-config>
+	
 </web-app>
