//컨플릭트 수정을 위한 푸시

--- a/Final_Project04/pom.xml
+++ b/Final_Project04/pom.xml
@@ -284,6 +284,7 @@
 		</dependency>
 		
 		  <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		  <!-- gson -->
           <!-- json 변환 -->
          <dependency>
              <groupId>com.google.code.gson</groupId>
