--- a/Final_Project04/src/main/webapp/WEB-INF/web.xml
+++ b/Final_Project04/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
-		
+		<async-supported>true</async-supported>
 		
 	</servlet>
 		
