--- a/Final_Project04/pom.xml
+++ b/Final_Project04/pom.xml
@@ -260,8 +260,8 @@
 			<version>1.1</version>
 			<scope>provided</scope>
 		</dependency>
-		
-		
+
+
 
 		<!-- thumbnailator -->
 		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
@@ -348,7 +348,7 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.6</version>
 		</dependency>
-			<!-- 잭슨 미세먼지 api -->
+		<!-- 잭슨 미세먼지 api -->
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -357,6 +357,14 @@
 		</dependency>
 
 
+
+		<!-- iamport 결제검증관련 추가 -->
+		<dependency>
+			<groupId>com.github.iamport</groupId>
+			<artifactId>iamport-rest-client-java</artifactId>
+			<version>0.2.14</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
@@ -364,8 +372,13 @@
 			<id>datanucleus</id>
 			<url>http://www.datanucleus.org/downloads/maven2/</url>
 		</repository>
+		
+		<!-- 결제검증 관련 추가 -->
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
 	</repositories>
-
 	<build>
 		<plugins>
 			<plugin>
